<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/user_id_tv"
            android:layout_marginBottom="5dp">

            <FrameLayout
                android:id="@+id/account_img_container"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/account_img_border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/account_img"
                    android:layout_width="98dp"
                    android:layout_height="98dp"
                    android:layout_gravity="center"
                    android:background="?attr/colorSurface"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/follow_or_signout_btn"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/account_img_container"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/post_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_0"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/post"
                        android:textColor="@color/black"
                        android:textSize="11dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/follower_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_0"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        android:textColor="@color/black"
                        android:textSize="11dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/following_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_0"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/black"
                        android:textSize="11dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/follow_or_signout_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/signout"
                android:textColor="@color/black"
                android:textSize="12dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/account_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/container" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/black"
            android:visibility="gone" />

    </RelativeLayout>

</layout>